@@ -1307,9 +1307,64 @@ namespace Computator.NET.Functions
         //Generalized Exponential Integral
         public static double En(int n, double x)
         {
+
+
             if (x < 0)
-                return double.NaN;
-            return (x == 0.0 || n < 0 || n > 2) ? Meta.Numerics.Functions.AdvancedMath.IntegralE(n, x) : gsl_sf_expint_En(n, x);
+            {
+                if (n < 0)
+                {
+                    return double.NaN; //DOMAIN_ERROR(result);
+                }
+                else if (n == 0)
+                {
+                    if (x == 0)
+                    {
+                        return double.NaN; //DOMAIN_ERROR(result);
+                    }
+                    else {
+                     //   result->val = (scale ? 1.0 : exp(-x)) / x;
+                       // result->err = 2 * GSL_DBL_EPSILON * fabs(result->val);
+                        //CHECK_UNDERFLOW(result);
+                        return gsl_sf_expint_En(n, x);//GSL_SUCCESS;
+                    }
+                }
+                else if (n == 1)
+                {
+                    return gsl_sf_expint_En(n, x);//expint_E1_impl(x, result, scale);
+                }
+                else if (n == 2)
+                {
+                    return gsl_sf_expint_En(n, x);//expint_E2_impl(x, result, scale);
+                }
+                else {
+                    if (x < 0)
+                    {
+                        return double.NaN;//DOMAIN_ERROR(result);
+                    }
+                    if (x == 0)
+                    {
+                       // result->val = (scale ? exp(x) : 1) * (1 / (n - 1.0));
+                       // result->err = 2 * GSL_DBL_EPSILON * fabs(result->val);
+                        //CHECK_UNDERFLOW(result);
+                        return gsl_sf_expint_En(n, x);//GSL_SUCCESS;
+                    }
+                    else {
+                        //gsl_sf_result result_g;
+                        //double prefactor = pow(x, n - 1);
+                        //int status = gsl_sf_gamma_inc_e(1 - n, x, &result_g);
+                        //double scale_factor = (scale ? exp(x) : 1.0);
+                        //result->val = scale_factor * prefactor * result_g.val;
+                        //result->err = 2 * GSL_DBL_EPSILON * fabs(result->val);
+                        //result->err += 2 * fabs(scale_factor * prefactor * result_g.err);
+                        //if (status == GSL_SUCCESS) CHECK_UNDERFLOW(result);
+                        return gsl_sf_expint_En(n, x);//status;
+                    }
+                }
+
+
+                gsl_sf_expint_En(n, x);
+            }
+            return Meta.Numerics.Functions.AdvancedMath.IntegralE(n, x);
         }
 
 
@@ -3677,10 +3732,66 @@ CallingConvention = System.Runtime.InteropServices.CallingConvention.Cdecl)]
         //Generalized Exponential Integral
         public static double En(int n, double x)
         {
+
+
             if (x < 0)
-                return double.NaN;
-            return (x == 0.0 || n < 0 || n > 2) ? Meta.Numerics.Functions.AdvancedMath.IntegralE(n, x) : gsl_sf_expint_En(n, x);
+            {
+                if (n < 0)
+                {
+                    return double.NaN; //DOMAIN_ERROR(result);
+                }
+                else if (n == 0)
+                {
+                    if (x == 0)
+                    {
+                        return double.NaN; //DOMAIN_ERROR(result);
+                    }
+                    else {
+                     //   result->val = (scale ? 1.0 : exp(-x)) / x;
+                       // result->err = 2 * GSL_DBL_EPSILON * fabs(result->val);
+                        //CHECK_UNDERFLOW(result);
+                        return gsl_sf_expint_En(n, x);//GSL_SUCCESS;
+                    }
+                }
+                else if (n == 1)
+                {
+                    return gsl_sf_expint_En(n, x);//expint_E1_impl(x, result, scale);
+                }
+                else if (n == 2)
+                {
+                    return gsl_sf_expint_En(n, x);//expint_E2_impl(x, result, scale);
+                }
+                else {
+                    if (x < 0)
+                    {
+                        return double.NaN;//DOMAIN_ERROR(result);
+                    }
+                    if (x == 0)
+                    {
+                       // result->val = (scale ? exp(x) : 1) * (1 / (n - 1.0));
+                       // result->err = 2 * GSL_DBL_EPSILON * fabs(result->val);
+                        //CHECK_UNDERFLOW(result);
+                        return gsl_sf_expint_En(n, x);//GSL_SUCCESS;
+                    }
+                    else {
+                        //gsl_sf_result result_g;
+                        //double prefactor = pow(x, n - 1);
+                        //int status = gsl_sf_gamma_inc_e(1 - n, x, &result_g);
+                        //double scale_factor = (scale ? exp(x) : 1.0);
+                        //result->val = scale_factor * prefactor * result_g.val;
+                        //result->err = 2 * GSL_DBL_EPSILON * fabs(result->val);
+                        //result->err += 2 * fabs(scale_factor * prefactor * result_g.err);
+                        //if (status == GSL_SUCCESS) CHECK_UNDERFLOW(result);
+                        return gsl_sf_expint_En(n, x);//status;
+                    }
+                }
+
+
+                gsl_sf_expint_En(n, x);
+            }
+            return Meta.Numerics.Functions.AdvancedMath.IntegralE(n, x);
         }
+
 
 
 
